--- a/exercicios/ex005/index.html
+++ b/exercicios/ex005/index.html
@@ -3,21 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-            section.container {
-                width: 500px;
-                height: 200px;
-                background-color: yellow;
-            }
-
-            article.content {
-                width: 200px;
-                height: 200px;
-                background-color: black;
-            }
-        </style>
+        <title></title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <section class="container">
+            <article class="content">
+
+            </article>
+        </section>
     </body>
 </html>
