--- a/exercicios/ex005/index.html
+++ b/exercicios/ex005/index.html
@@ -7,10 +7,69 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <section class="container">
-            <article class="content">
-
-            </article>
-        </section>
+        <div id="container">
+            <table>
+                <thead>
+                    <tr>
+                        <th rowspan="2" scope="col">Área</th>
+                        <th rowspan="2" scope="col">Disciplinas</th>
+                        <th colspan="2" scope="colgroup">Notas</th>
+                        <th rowspan="2" scope="col">Média</th>
+                    </tr>
+                    <tr>
+                        <th scope="col">Nota1</th>
+                        <th scope="col">Nota2</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th rowspan="4" scope="rowgroup">Exatas</th>
+                        <td>Matematica</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>Física</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>Química</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>Biologia</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>10</td>
+                    </tr>
+                    <tr class="total">
+                        <th colspan="4" scope="row">Média de Exatas</th>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <th rowspan="2" scope="rowgroup">Humanas</th>
+                        <td>História</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>Geografia</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>10</td>
+                    </tr>
+                    <tr class="total">
+                        <th colspan="4" scope="row">Média de Humanas</th>
+                        <td>10</td>
+                    </tr>
+                </tbody>
+        </div>
+        </table>
     </body>
 </html>
